--- a/cloudinary/app.yml
+++ b/cloudinary/app.yml
@@ -4,28 +4,28 @@ meta:
   version: 1.0.0-dev.1
   vendor: unrvld
   summary: Integrate Cloudinay DAM with Content Graph
-  support_url: 
-  contact_email: 
+  support_url: https://support@Optimizely.com
+  contact_email: andrew.markham@unrvld.com
   categories:
     - Site & Content Experience
   availability:
-    - us
+    - all
 
 runtime: node22
 
-functions:
-  handle_incoming_object:
-    entry_point: HandleIncomingObject
-    description: Transforms incoming data into Optimizely Hub object
+#functions:
+#  handle_incoming_object:
+#    entry_point: HandleIncomingObject
+#    description: Transforms incoming data into Optimizely Hub object
 
 jobs:
   historical_import:
     entry_point: HistoricalImport
     description: Performs a one-time historical import when triggered
 
-  nightly_import:
-    entry_point: NightlyImport
-    # runs at midnight every night
-    cron: 0 0 0 ? * *
-    description: Performs a nightly import for data that isn't provided or needed in real-time
+#  nightly_import:
+#    entry_point: NightlyImport
+#    # runs at midnight every night
+#    cron: 0 0 0 ? * *
+#    description: Performs a nightly import for data that isn't provided or needed in real-time
 
