--- a/cloudinary/forms/settings.yml
+++ b/cloudinary/forms/settings.yml
@@ -2,5 +2,16 @@ sections:
   - key: instructions
     label: Instructions
     elements:
-    - type: instructions
-      text: Design your settings form in this file. See the [forms documentation](https://docs.developers.optimizely.com/digital-experience-platform/v1.5.0-optimizely-data-platform/docs/forms#settingsyml) for details.
+    - type: text
+      key: url
+      label: Integration URL
+      help: The URL of the Cloudinary account to integrate with. This is typically in the format `https://api.cloudinary.com/v1_1/<cloud_name>`.
+      hint: https://api.cloudinary.com/v1_1/<cloud_name>
+    - type: text
+      key: username
+      label: Username
+      help: The username for the Cloudinary account.
+    - type: secret
+      key: password
+      label: Passwword
+      help: The password for the Cloudinary account.
